# parameter_scheduling_mpc_ros

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: parameter_scheduling_mpc.launch  pvmpc.launch
scripts/: mdp.py  nmpc_cartesian.py  nmpc_polar.py  nmpc_rotation.py  nmpc_switching.py  parameter_scheduling_mpc.py  utils.py  variables.py
